Changed all card images to be background images to avoid stretching

--- a/css/styles.css
+++ b/css/styles.css
@@ -281,9 +281,10 @@ h4 {
   padding-bottom: 0;
 }
 
-.card-small img {
+.card-small .card-image {
   width: 50%;
-  height: 100%;
+  height: 80px;
+  padding-top: 0;
   border-radius: 5px 0 0 5px;
 }
 
@@ -493,7 +494,6 @@ h4 {
 
 .random-element-container .card {
   display: block;
-  height: 300px;
 }
 
 /* NAVIGATION */
@@ -714,9 +714,11 @@ h4 {
 }
 
 .card-image {
-  width: 100%;
-  height: 200px;
   border-radius: 5px 5px 0 0;
+  padding-top: 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .blog-page-banner {
@@ -725,7 +727,9 @@ h4 {
 
 .blog-page-banner-image {
   width: 100%;
-  height: 250px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 /* ICONS */
@@ -1052,6 +1056,7 @@ h4 {
   .search-content {
     gap: 2rem;
     grid-template-columns: repeat(5, 1fr);
+    min-height: 0;
   }
 
   .navbar {
